# mini_openenv

./: .gitignore  .hfignore  Dockerfile  README.md  inference.py  main.py  openenv.yaml  openenv_env.py  pyproject.toml  requirements.txt  start.sh  tasks.json  tasks.py
mini/: OCR_text.py
server/: app.py
