[project]
name = "mini-productivity-openenv"
version = "0.1.0"
dependencies = [
    "fastapi", 
    "uvicorn", 
    "pyautogui", 
    "python-xlib", 
    "openenv-core",
    "psutil",      # Added this
    "pillow",      # Added this for image processing
    "openai"       # Added this for your model calls
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build_meta"
